Mon Dec 23 06:57:41 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* orbsvcs/orbsvcs/Notify/ThreadPool_Task.h:
	* orbsvcs/orbsvcs/Notify/ThreadPool_Task.cpp: Fixed warnings in
	  SunCC builds. Yet another problem with SunCC compiler. This
	  should also hopefully fix a similar problem with Borland 6.

Sun Dec 22 22:46:50 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/Connection_Handler.cpp: Replaced the word "error" from one
	  of the debug statements. The test
	  tests/RTCORBA/MT_Client_Protocol_Priority uses a script that
	  parses the output from the test run to determine if the test was
	  right. The script searches for the word "error" in the output
	  and on seeing it barf's. Hence the change.

Sun Dec 22 23:18:58 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/Reply_Dispatcher.h:
	* tao/Reply_Dispatcher.i: Added an accessor for <timeout_>

	* tao/Muxed_TMS.cpp: Call start_dispatch () and end_dispatch ()
	  only if the Reply_Dispatcher has timout associated with it. This
	  should fix most of the problems that showed up in the latest
	  builds.

Sun Dec 22 20:22:50 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* performance-tests/Latency/Thread_Per_Connection/svc.conf: Used
	  the blocked connect strategy instead of the default
	  strategy. This is needed to work around the problem outlined in
	  BUG 1408. 

Sun Dec 22 11:26:30 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	Fix for Bug 1276. Please see 

	http://deuce.doc.wustl.edu/bugzilla/show_bug.cgi?id=1276 for more
        details on this bug. The gist of the fix is this

	  - If a follower thread timesout, it first tries to unbind the
	    dispatcher from the table
	 
	  - If unbinding is succesfull it throws a TIMEOUT exception to
	    the client. 

	  - If unbinding is unsuccesful, it waits on a condition variable
	    in the reply dispatcher
